--- a/app/assets/stylesheets/ridepilot-ui.scss
+++ b/app/assets/stylesheets/ridepilot-ui.scss
@@ -109,7 +109,7 @@
 		@include un-box-shadow;
 		font-size: 1em;
 		line-height: 1.4;
-		padding: .5em.25em;
+		padding: .5em .25em;
 		height: $input-height;
 		background-color: $input-bg;
 		&:focus {
@@ -310,7 +310,7 @@ form {
 	padding: $object-pad;
 	border: 1px solid $gray-3;
 	position: relative;
-	margin: 0 0 $object-pad 0;
+	margin: .375em 0 $object-pad 0;
 	transition: border .25s ease-in-out;
 	&::before {
 		content: '';
@@ -477,9 +477,6 @@ form {
 		}
 		.panel & {
 			border: none;
-			td {
-				padding: .5rem 1rem;
-			}
 		}
 	}
 }
@@ -880,6 +877,55 @@ form#new_user {
 	}
 }
 
-
+body.dispatchers.index {
+	#main {
+		padding-left: 0;
+		padding-right: 0;
+	}
+	#page-header, #dispatch_runs_container {
+		padding-left: $content-pad;
+		padding-right: $content-pad;
+	}
+	#dispatch_runs_trips {
+		padding: 0;
+		#unassigned_trips_container {
+			padding: 0;
+			border-right: 1px solid $brand-primary;
+			border-left: 1px solid $brand-primary;
+			#unassigned_trips_panel {
+				border: none;
+				table {
+					border: none;
+				}
+			}
+			.panel-heading {
+				background-color: $brand-primary;
+				padding: 1em $object-pad;
+				color: $white;
+				.trips-quantity {
+					font-weight: 600;
+					display: inline-block;
+					margin-left: 1em;
+				}
+			}
+			
+		}
+		.hsplitter {
+			background-color: $brand-primary;
+			height: 2em;
+			padding-top: .25em;
+			border-radius: 6px 6px 0 0;
+			text-align: center;
+			border-bottom: 1px solid $white;
+			&::before {
+				@include font-awesome;
+				content: '\f58d';
+				display: inline-block;
+				height: 1em;
+				color: $white;
+			}
+		}
+	}
+}
 
 
