--- a/app/views/dispatchers/_runs_table.html.haml
+++ b/app/views/dispatchers/_runs_table.html.haml
@@ -1,4 +1,4 @@
-%table.table.table-striped.table-condensed.table-bordered#runs_table
+%table.table.table-striped#runs_table
   %thead
     %tr
       %th= translate_helper(:run_table_header_name)
