--- a/app/views/dispatchers/_unassigned_trips_panel.html.haml
+++ b/app/views/dispatchers/_unassigned_trips_panel.html.haml
@@ -18,7 +18,7 @@
             %i.fa.fa-plus
       %span.panel-expand-collapse-reverse.dispatch-action{title: 'Collapse/expand'}
         %i.fa.fa-chevron-down
-    %h3.panel-title.text-center
+    %h3.panel-title
       = render 'unassigned_trips_panel_title'
 
   .panel-body
