--- a/app/views/dispatchers/_unassigned_trips_table.html.haml
+++ b/app/views/dispatchers/_unassigned_trips_table.html.haml
@@ -1,4 +1,4 @@
-%table.table.table-striped.table-bordered#unassigned_trips_table
+%table.table.table-striped#unassigned_trips_table
   %thead
     %tr
       %th
