--- a/app/views/recurring_dispatchers/_run_trips_panel.html.haml
+++ b/app/views/recurring_dispatchers/_run_trips_panel.html.haml
@@ -11,14 +11,14 @@
             %i.fa.fa-check-circle-o
       - if can?(:cancel, run)  
         %span.dispatch-action
-          = link_to cancel_run_recurring_dispatchers_path(run_id: run.id), title: 'Cancel run', style: 'color: white;', remote: true, data: {confirm: run_cancel_warning(run)} do 
+          = link_to cancel_run_recurring_dispatchers_path(run_id: run.id), title: 'Cancel run', remote: true, data: {confirm: run_cancel_warning(run)} do 
             %i.fa.fa-power-off
       %span.dispatch-action
-        = link_to repeating_run_path(run, from_dispatch: true), style: 'color: white;', title: "View details" do 
+        = link_to repeating_run_path(run, from_dispatch: true), title: "View details" do 
           %i.fa.fa-external-link
       - if can?(:edit, run)
         %span.dispatch-action
-          = link_to edit_repeating_run_path(run, from_dispatch: true), style: 'color: white;', title: 'Edit' do 
+          = link_to edit_repeating_run_path(run, from_dispatch: true), title: 'Edit' do 
             %i.fa.fa-pencil
       %span.panel-close.dispatch-action{title: 'Close'}
         %i.fa.fa-remove
