--- a/app/views/reporting/results/_header.html.haml
+++ b/app/views/reporting/results/_header.html.haml
@@ -1,6 +1,7 @@
+- params = @params[:q].permit(@params[:q].keys).to_h if @params && @params[:q]
 .row.info-header
   .col-sm-12
     .btns.pull-left
-      = link_to translate_helper(:back), reporting.report_path(@report, params: @params), class: 'btn action-button btn-arrow-left'
+      = link_to translate_helper(:back), reporting.report_path(@report, params: params), class: 'btn action-button btn-arrow-left'
     .btns.pull-right
-      = link_to translate_helper(:export), reporting.report_results_path(@report, params: @params, format: 'csv'), class: 'btn action-button controls'
+      = link_to translate_helper(:export), reporting.report_results_path(@report, params: params, format: 'csv'), class: 'btn action-button controls'
