--- a/app/views/recurring_dispatchers/_trip_result_dropdown.html.haml
+++ b/app/views/recurring_dispatchers/_trip_result_dropdown.html.haml
@@ -1,5 +1,5 @@
 %span.dropdown.dispatch-action.trip_results_dropdown{style: 'margin-bottom: 5px;'}
-  %a.dropdown-toggle.non_jump_top{href: '#', type: 'button', style: 'color: white; font-size: small;', data: {toggle: 'dropdown'}} 
+  %a.dropdown-toggle.non_jump_top{href: '#', type: 'button', style: 'font-size: small;', data: {toggle: 'dropdown'}} 
     Set trips as
     %i.fa.fa-ellipsis-h
     %span.caret
