--- a/app/views/recurring_dispatchers/_unschedule_trip_dropdown.html.haml
+++ b/app/views/recurring_dispatchers/_unschedule_trip_dropdown.html.haml
@@ -3,7 +3,7 @@
   options[Run::UNSCHEDULED_RUN_ID] = 'Unscheduled'
 
 %span.dropdown.dispatch-action.unschedule_trip_dropdown{style: 'margin-bottom: 5px;'}
-  %a.dropdown-toggle.non_jump_top{href: '#', type: 'button', style: 'color: white; font-size: small;', data: {toggle: 'dropdown'}} 
+  %a.dropdown-toggle.non_jump_top{href: '#', type: 'button', style: 'font-size: small;', data: {toggle: 'dropdown'}} 
     Assign to
     %i.fa.fa-ellipsis-h
     %span.caret
