--- a/app/assets/stylesheets/_ridepilot-ui-helpers.scss
+++ b/app/assets/stylesheets/_ridepilot-ui-helpers.scss
@@ -40,7 +40,7 @@ $pink-1: $pink;
 $pink-2: mix($white, $pink, 30);
 $pink-3: mix($white, $pink, 60);
 
-$orange: #F47C56;
+$orange: #F4A256;
 $orange-1: $orange;
 $orange-2: mix($white, $orange, 30);
 $orange-3: mix($white, $orange, 60);
