--- a/app/views/drivers/availability_forecast.html.haml
+++ b/app/views/drivers/availability_forecast.html.haml
@@ -1,7 +1,7 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'drivers'
 %h1.page-title
   Availability Forecast
-.row
+.row.no-gutters
   .col-sm-4.col-lg-3.forecast-col
     = render 'availability_forecast_table'
   .col-sm-8.col-lg-9.availability-col
